k8s/DEV/namespace.yml
### PLEASE DO NOT MODIFY THIS FILE
### THIS IS A TEMPLATE ONLY
---
apiVersion: v1
kind: Namespace
metadata:
  name: quotes-dev
---
