k8s/DEV/network.yml
### PLEASE DO NOT MODIFY THIS FILE
### THIS IS A TEMPLATE ONLY
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-dev-service
  namespace: quotes-dev
spec:
  selector:
    app: quotes-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30090
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-dev-ingress
  namespace: quotes-dev
spec:
  ingressClassName: nginx
  rules:
    - host: 'quotes.cavecafe.app'
      http:
        paths:
          - backend:
              service:
                name: quotes-dev-service
                port:
                  number: 80
            path: /
            pathType: Prefix
---
